# q-q

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: manual.yml  release.yml  rust.yml
docs/: install.md
src/: apps.rs  credits.rs  games.rs  main.rs  menu_handler.rs  other.rs
src/apps/: clock.rs
src/games/: guessing_game.rs
src/other/: progress_bar_test.rs  python.rs
