[package]
name = "q-q"
version = "0.1.1"
edition = "2018"
authors = ["electron271", "SoupDevHub"]
license = "MIT"
description = "quantity>quality | put as many programs into a single executable as possible"
readme = "README.md"
homepage = "https://github.com/unstable-errors/q-q"
repository = "https://github.com/unstable-errors/q-q"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
dialoguer = "0.9.0"
indicatif = "0.16.2"
lazy_static = "1.4.0"
termimad = "0.19.4"
crossterm = "0.21.0"
chrono = "0.4.19"
colored = "2.0.0"
