[package]
name = "q-q"
version = "0.1.2"
edition = "2018"
authors = ["electron271", "SoupDevHub"]
license = "MIT"
description = "quantity>quality | put as many programs into a single executable as possible"
readme = "README.md"
homepage = "https://github.com/unstable-errors/q-q"
repository = "https://github.com/unstable-errors/q-q"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
dialoguer = "0.10.2"
indicatif = "0.17.2"
lazy_static = "1.4.0"
termimad = "0.20.3"
crossterm = "0.23.2"
chrono = "0.4.23"
colored = "2.0.0"
